    * Change "Forward" abbreviation from "Fw" to "Fwd" (Tim Gerundt).
    * Removed ".svn" folders from theme selections (Tobias Mathes).
    * Formatting of language file has been modified, for coorperation
      with TranslateWiki.net (Siebrand Mazeland).
    * Language files update (Siebrand Mazeland, TranslateWiki.net).
    * Drop fixed pixel font sizes from themes (Tim Gerundt).

NOCC 1.7  January 01, 2008

  Bugs
    * Bug #2184243 : inconcistent reporting of new mail (Michiel van Loon).
    * Bug #2140106 : Calling download.php without prior login results in
      download (Oliver Heil).
    * Bug #2013844 : Javascript warning validate(f) send.php (Arnaud Boudou).
    * Bug #2009567 : Cannot delete one mail (Arnaud Boudou).

  Patches
    * Patch #2093879 : New page navigation for inbox (Tim Gerundt).
    * Patch #2028613 : Style attachments table in send.php (Tim Gerundt).
    * Patch #2019643 : Spanish translation (Juan).
    * Patch #2019010 : Change "receipt" checkbox in send form (Tim Gerundt).
    * Patch #2011244 : Updated Czech translation (Ragimiri).
    * Patch #2010065 : Optimize regexs for remote image security (Tim Gerundt).

  Feature Requests
    * RFE #2025620 : send_delay (Arnaud Boudou).
    * RFE #2025591 : login_prefix (Arnaud Boudou).

  Misc
    * Update FCKeditor to version 2.6.3 (Tim Gerundt).
    * Don't use JavaScript to open links in a new window (Tim Gerundt).
    * Switch back to XHTML 1.0 Transitional (Tim Gerundt).
    * Allow preferences page even without "prefs_dir" (Tim Gerundt).
    * Make displaying of image and text attachments more styleable (Tim Gerundt).
    * Refresh "blue" theme (Tim Gerundt).
    * Fix attachment list in verbose header view (Tim Gerundt).
    * Add favicon to contacts pages (Tim Gerundt).
    * Don't print the sub menus (Tim Gerundt).
    * Load "config/conf.php" via "common.php" file (Tim Gerundt).
    * Arrange preference entries (Tim Gerundt).