@@ -3,7 +3,10 @@
   if (!isset($conf->loaded))
     die('Hacking attempt');
 
-$custom_footer = './themes/' . str_replace('..','',convertLang2Html($_SESSION['nocc_theme'])) . '/footer.php';
+if (!isset($theme)) //if the $theme variable NOT set...
+    $theme = new NOCC_Theme($_SESSION['nocc_theme']);
+
+$custom_footer = $theme->getCustomFooter();
 if(file_exists($custom_footer)) {
     include($custom_footer);
 }
@@ -12,7 +15,7 @@ else {
     </div>
         <div id="footer">
             <a href="http://nocc.sourceforge.net" target="_blank">
-                <img src="themes/<?php echo str_replace('..','',convertLang2Html($_SESSION['nocc_theme'])) ?>/img/button.png" id="footerLogo" alt="Powered by NOCC" />
+                <img src="<?php echo $theme->getPath(); ?>/img/button.png" id="footerLogo" alt="Powered by NOCC" />
             </a>
         </div>
     </body>
