@@ -18,6 +18,7 @@
 
 require_once './classes/class_local.php';
 require_once './classes/nocc_mailreader.php';
+require_once './classes/nocc_theme.php';
 
 /* ----------------------------------------------------- */
 
